[gd_scene load_steps=17 format=3 uid="uid://cvq2aat8v46cr"]

[ext_resource type="Script" path="res://scenes/levels/level0/level_0.gd" id="1_o1p8t"]
[ext_resource type="PackedScene" uid="uid://dnn43v4fdscgt" path="res://scenes/landscape/landscape.tscn" id="2_57y0l"]
[ext_resource type="PackedScene" uid="uid://b1acmp7jgfnbh" path="res://entities/npcs/bouncer/bouncer.tscn" id="5_ks3pi"]
[ext_resource type="PackedScene" uid="uid://ymosdebsuhrl" path="res://entities/npcs/chef/chef.tscn" id="6_7poqa"]
[ext_resource type="PackedScene" uid="uid://cbgprtu0v20k0" path="res://entities/npcs/chicken/chicken.tscn" id="7_6jt5c"]
[ext_resource type="PackedScene" uid="uid://ccligdfdquarq" path="res://scenes/train/train_car.tscn" id="7_udkuy"]
[ext_resource type="Theme" uid="uid://cwe4mg61nharw" path="res://assets/theme.tres" id="8_0sj4o"]
[ext_resource type="PackedScene" uid="uid://b5ihphycsnfa7" path="res://entities/npcs/cold/cold.tscn" id="8_ijo25"]
[ext_resource type="PackedScene" uid="uid://b8mvfeuktbrcj" path="res://entities/npcs/conductor/conductor.tscn" id="9_4ruvy"]
[ext_resource type="PackedScene" uid="uid://biye7olleue7b" path="res://entities/items/item_slot_control.tscn" id="9_wcjoj"]
[ext_resource type="PackedScene" uid="uid://7tjiolel8q3a" path="res://entities/npcs/gardener/gardener.tscn" id="10_kcjrq"]
[ext_resource type="PackedScene" uid="uid://brmpfdacmroaf" path="res://entities/player/player.tscn" id="10_ywoct"]
[ext_resource type="PackedScene" uid="uid://b01ai7i2kbveq" path="res://entities/npcs/hungry/hungry.tscn" id="11_cieq8"]
[ext_resource type="Texture2D" uid="uid://ovsvy7jgctvu" path="res://assets/items/ticket.png" id="11_qjn2n"]
[ext_resource type="PackedScene" uid="uid://byiur15lgy6qt" path="res://entities/items/item.tscn" id="12_0856c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyhgv"]
size = Vector2(322, 609)

[node name="Level0" type="Node2D"]
script = ExtResource("1_o1p8t")

[node name="Landscape" parent="." instance=ExtResource("2_57y0l")]

[node name="TrainCar" parent="." instance=ExtResource("7_udkuy")]
position = Vector2(0, 137)

[node name="NPCs" type="Node2D" parent="."]

[node name="Bouncer" parent="NPCs" instance=ExtResource("5_ks3pi")]
visible = false
position = Vector2(880, 632)

[node name="Chef" parent="NPCs" instance=ExtResource("6_7poqa")]
visible = false
position = Vector2(1224, 624)

[node name="Chicken" parent="NPCs" instance=ExtResource("7_6jt5c")]
visible = false
position = Vector2(1536, 648)

[node name="Cold" parent="NPCs" node_paths=PackedStringArray("dialog_bubble") instance=ExtResource("8_ijo25")]
position = Vector2(1216, 664)
dialog_bubble = NodePath("Bubble")

[node name="Bubble" type="Polygon2D" parent="NPCs/Cold"]
position = Vector2(-736, -496)
polygon = PackedVector2Array(0, 0, 776, 21, 750, 289, 627, 303, 649, 423, 500, 314, 16, 271)

[node name="MarginContainer" type="MarginContainer" parent="NPCs/Cold/Bubble"]
offset_left = 31.0
offset_top = 15.0
offset_right = 720.0
offset_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8_0sj4o")

[node name="HFlowContainer" type="HFlowContainer" parent="NPCs/Cold/Bubble/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Line1" type="RichTextLabel" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "The conductor won't let me in unless I"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Line2a" type="RichTextLabel" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "have a"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ItemSlotControl" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer" instance=ExtResource("9_wcjoj")]
layout_mode = 2
size_flags_horizontal = 2

[node name="ItemSlot" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer/ItemSlotControl" index="0" node_paths=PackedStringArray("item")]
item = NodePath("TicketItem")

[node name="TicketItem" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer/ItemSlotControl/ItemSlot" index="1" instance=ExtResource("12_0856c")]
freeze = true

[node name="Sprite" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer/ItemSlotControl/ItemSlot/TicketItem" index="2"]
texture = ExtResource("11_qjn2n")

[node name="Line2b" type="RichTextLabel" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = ". But it's freezing in this"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Line3" type="RichTextLabel" parent="NPCs/Cold/Bubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "car, I think I'm catching a cold..."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Conductor" parent="NPCs" node_paths=PackedStringArray("dialog_bubble") instance=ExtResource("9_4ruvy")]
position = Vector2(2728, 664)
dialog_bubble = NodePath("NoBubble")

[node name="NoBubble" type="Polygon2D" parent="NPCs/Conductor"]
position = Vector2(-736, -496)
polygon = PackedVector2Array(0, 0, 792, 0, 792, 288, 627, 303, 649, 423, 500, 314, 16, 271)

[node name="MarginContainer" type="MarginContainer" parent="NPCs/Conductor/NoBubble"]
offset_left = 31.0
offset_top = 15.0
offset_right = 720.0
offset_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8_0sj4o")

[node name="HFlowContainer" type="HFlowContainer" parent="NPCs/Conductor/NoBubble/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Line1" type="RichTextLabel" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "I'm sorry, but I can't let you pass through"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Line2" type="RichTextLabel" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "me, the other train cars are for our"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Line3a" type="RichTextLabel" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "premium guests who bought a"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ItemSlotCointrol" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer" instance=ExtResource("9_wcjoj")]
layout_mode = 2
size_flags_horizontal = 6

[node name="ItemSlot" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer/ItemSlotCointrol" index="0" node_paths=PackedStringArray("item")]
item = NodePath("TicketItem")

[node name="TicketItem" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer/ItemSlotCointrol/ItemSlot" index="1" instance=ExtResource("12_0856c")]
freeze = true

[node name="Sprite" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer/ItemSlotCointrol/ItemSlot/TicketItem" index="2"]
texture = ExtResource("11_qjn2n")

[node name="Line3b" type="RichTextLabel" parent="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="PassBubble" type="Polygon2D" parent="NPCs/Conductor"]
position = Vector2(-730.8, -472)
scale = Vector2(0.983333, 0.943262)
polygon = PackedVector2Array(312, 120, 735.051, 127.218, 792, 288, 627, 303, 649, 423, 500, 314, 352, 272)

[node name="MarginContainer" type="MarginContainer" parent="NPCs/Conductor/PassBubble"]
offset_left = 336.0
offset_top = 144.0
offset_right = 743.0
offset_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("8_0sj4o")

[node name="HFlowContainer" type="HFlowContainer" parent="NPCs/Conductor/PassBubble/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Line1" type="RichTextLabel" parent="NPCs/Conductor/PassBubble/MarginContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "Okay, you can pass."
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Gardener" parent="NPCs" instance=ExtResource("10_kcjrq")]
visible = false
position = Vector2(2376, 632)

[node name="Hungry" parent="NPCs" instance=ExtResource("11_cieq8")]
visible = false
position = Vector2(2656, 632)

[node name="Player" parent="." instance=ExtResource("10_ywoct")]
position = Vector2(312, 704)
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_right = 2928
limit_bottom = 1080
position_smoothing_enabled = true
drag_horizontal_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]

[node name="CenterContainer" type="CenterContainer" parent="Player/Camera2D/CanvasLayer"]
z_index = 7
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WinMessage" type="RichTextLabel" parent="Player/Camera2D/CanvasLayer/CenterContainer"]
visible = false
layout_mode = 2
theme = ExtResource("8_0sj4o")
bbcode_enabled = true
text = "[color=white][font_size=128]YOU WIN!"
fit_content = true
autowrap_mode = 0

[node name="WinArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinArea"]
position = Vector2(2984, 615.5)
shape = SubResource("RectangleShape2D_lyhgv")

[editable path="NPCs/Cold/Bubble/MarginContainer/HFlowContainer/ItemSlotControl"]
[editable path="NPCs/Cold/Bubble/MarginContainer/HFlowContainer/ItemSlotControl/ItemSlot/TicketItem"]
[editable path="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer/ItemSlotCointrol"]
[editable path="NPCs/Conductor/NoBubble/MarginContainer/HFlowContainer/ItemSlotCointrol/ItemSlot/TicketItem"]
